app/globals.css
/* ... */
.contact-side .image-left-3{
    top: 190px;
    left: 60px;
    width: 40px;
    transform: rotate(20deg);
}
.contact-side .image-left-4{
    top: 210px;
    right: 30px;
    width: 100px;
}
.contact-side .image-left-5{
    bottom: 170px;
    left: 35px;
    width: 80px;
    transform: rotate(-20deg);
}
.contact-side .image-left-6{
    bottom: 0;
    right: 45px;
    width: 125px;
    transform: rotate(-25deg);
}
.contact-side .image-right-1{
    top: -50px;
    left: 30px;
    width: 70px;
    transform: rotate(-35deg);
    animation: topBottom 3s linear infinite;
}
.contact-side .image-right-2{
    top: 100px;
    right: 60px;
    width: 70px;
    transform: scaleX(-1);
}
.contact-side .image-right-3{
    top: 200px;
    right: 60px;
    width: 190px;
    transform: rotate(35deg);
}
.contact-side .image-right-4{
    bottom: 150px;
    left: 20px;
    width: 60px;
}
.contact-side .image-right-5{
    bottom: 0;
    right: 30px;
    width: 210px;
}
/* End Contact */

/* play page */
.play-area {
    width: 100%;
    padding-top: 29px;
    position: static;
    inset: 0%;
    overflow: visible;
    max-width: 1900px;
    margin: 50px auto 0;
    overflow-y: visible !important;
    overflow-x: visible !important;
}
.play-area .play-details{
    width: fit-content;
    margin: 0 auto;
}
.play-area.contact-area {
    margin: 0 auto;
}
.contact-details {
    z-index: 2;
    text-align: center;
    width: 40%;
    max-width: 40%;
    margin: 30px auto 0;
    position: relative;
}
.contact-details .envelope {
    width: 90px;
    max-width: 90px;
    margin: 0 auto 16px;
    display: block;
}
.play-area .play-icons {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
}
.play-area .play-mail {
    text-align: center;
}
.play-area .mailto-button {
    color: #000;
    background-color: #fff;
    border: 2px solid #000;
    display: inline-block;
    padding: 9px 25px;
    border-radius: 8px;
    text-decoration: none;
}
.play-area .mailto-button:hover  {
    color: #fff;
    background-color: #000;
    display: inline-block;
}
.play-area .play-icons .icon {
    width: 100%;
    max-width: 50px;
    max-height: 50px;
    margin-bottom: 15px;
    display: block;
}
.play-area .email-address {
    color: #000;
    text-align: center;
    width: auto;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    font-size: 18px;
}
.play-area .email-copy {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}
.play-area .button.copy-clip {
    color: #000;
    background-color: #fff;
    display: inline-block;
    border: 1px solid #000;
    padding: 9px 20px;
    border-radius: 8px;
    text-decoration: none;
}
.play-area .button.copy-clip:hover {
    color: #fff;
    background-color: #000;
}
.play-area .arms {
    aspect-ratio: auto;
    object-fit: fill;
    width: 100%;
    max-width: 100%;
    height: auto;
    min-height: 60vw;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    top: -200px;
    z-index: -1;
    --arm-radius: 26vw;
    --arm-center-x: 50%;
    --arm-center-y: 58%;
}

@keyframes fadeIn {
    to {
    opacity: 1;
    }
}

.arm-one {
    position: absolute;
    left: 25px;
    transform: rotate(94deg);       
    width: 8%;
    max-width: 8%;
    top: -340px;
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.1s;
}

.arm-two {
    position: absolute;
    width: 8%;
    max-width: 8%;
    top: -180px;
    left: 7%;
    transform: rotate(83deg);
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.2s;

}
.arm-three {
    width: 8%;
    max-width: 8%;
    top: -10px;
    left: -10%;
    transform: rotate(76deg);
    position: absolute;
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.3s;
}
.arm-four {
    position: absolute;
    transform: rotate(65deg);
    width: 8%;
    max-width: 8%;
    top: 45px;
    left: 7%;
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.4s;
}
.arm-five {
    position: absolute;
    transform: rotate(52deg);
    width: 8%;
    max-width: 8%;
    top: 285px;
    left: -1%;
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.5s;
}
.arm-six {
    position: absolute;
    transform: rotate(42deg);
    width: 8%;
    max-width: 8%;
    top: 200px;
    left: 20%;
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.6s;
}
.arm-seven {
    position: absolute;
    transform: rotate(26deg);
    width: 8%;
    max-width: 8%;
    top: 370px;
    left: 28%;
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.7s;
}
.arm-eight {
    position: absolute;
    transform: rotate(0deg);
    width: 8%;
    max-width: 8%;
    top: 270px;
    left: 45%;
    opacity: 0;
    animation-name: fadeIn, bounceBack;
    animation-duration: 0.3s, 0.9s;
    animation-delay: 0.8s, 1.4s;
    animation-timing-function: ease, ease;
    animation-fill-mode: forwards, forwards;
}

@keyframes bounceBack {
  0% {
    top: 270px;
  }
  10% {
    top: 272px;
  }
  60% {
    top: 250px;
  }
  100% {
    top: 270px; 
  }
}

.arm-nine {
    width: 8%;
    max-width: 8%;
    position: absolute;
    top: 320px;
    left: 63%;
    transform: rotateX(180deg) rotateY(180deg) rotate(-30deg);
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.7s;
}
.image-23 {
    overflow: visible;
    transform: rotateX(180deg) rotateY(180deg) rotate(0);
}
.arm-ten {
    position: absolute;
    width: 8%;
    max-width: 8%;
    top: 168px;
    left: 73%;
    transform: rotateX(180deg) rotateY(180deg) rotate(-47deg);
    opacity: 0;
    animation: fadeIn 0.3s ease forwards;
    animation-delay: 0.6s;
}
.image-24 {
    overflow: visible;
    transform: rotateX(180deg) rotateY(180deg) rotate(0);
}
/* ... */

